--- a/multimedia.html
+++ b/multimedia.html
@@ -91,7 +91,7 @@
                 </div>
                 </div>
             </div>
-
+            <div class="cb"></div>
         </main>
         <footer>
             <h1 class="bg-azul-o text-center text-white py-3">&copy; Carlos Ruiz</h1>
