--- a/multimedia.html
+++ b/multimedia.html
@@ -74,10 +74,10 @@
                         <img src="img/1200px-Ayuntamiento_de_Noez.jpg" alt="">
                     </div>
                     <div class="col3">
-                <div>
+                <div class="col3">
                     <img src="img/220px-Iglesia_de_San_Julián,_Noez_01.jpg" alt="">
                 </div>
-                <div>
+                <div class="col3">
                     <img src="img/448ae483d0367cb491b0bb3b845cc97a.jpg" alt="">
                 </div>
                 <div>
