--- a/formularios.html
+++ b/formularios.html
@@ -71,15 +71,15 @@
                     <h2 class="text-center">FORMULARIOS</h2>
                     <form action="#" method="get" class="formlogin">
                         <fieldset>
-                            <legend>Login</legend>
+                            <legend class="">Login</legend>
                             <p>
-                                <input type="text" name="user" id="" placeholder="User">
+                                <input class="black" type="text" name="user" id="" placeholder="User">
                             </p>
                             <p>
-                                <input type="password" name="pass" id="" placeholder="Clave">
+                                <input class="black" type="password" name="pass" id="" placeholder="Clave">
                             </p>
                             <p>
-                                <input type="submit" value="Enviar">
+                                <input class="black" type="submit" value="Enviar">
                             </p>
                         </fieldset>
                     </form>
@@ -87,55 +87,55 @@
                         <fieldset>
                             <legend>Registro</legend>
                             <p><label for="">Input type text:</label>
-                                <input type="text" name="user" id="">
+                                <input class="black" type="text" name="user" id="">
                             </p>
                             <p>
                                 <label for="">Input type password:</label>
-                                <input type="password" name="pass" id="">
+                                <input class="black" type="password" name="pass" id="">
                             </p>
                             <p>
                                 <label for="">Provincia:</label>
-                                <select name="provincia" id="">
-                                    <option value="1">Toledo</option>
-                                    <option value="2">Cuenca</option>
-                                    <option value="3">C. Real</option>
-                                    <option value="4">Guadalajara</option>
-                                    <option value="5">Albacete</option>
+                                <select class="black" name="provincia" id="">
+                                    <option class="black" value="1">Toledo</option>
+                                    <option class="black" value="2">Cuenca</option>
+                                    <option class="black" value="3">C. Real</option>
+                                    <option class="black" value="4">Guadalajara</option>
+                                    <option class="black" value="5">Albacete</option>
                                 </select>
                             </p>
                             <p>
                                 <label for="">Aficiones:</label><br/>
-                                <input type="checkbox" name="cine" id=""> Cine<br/>
-                                <input type="checkbox" name="deportes" id=""> Deportes<br/>
-                                <input type="checkbox" name="viajar" id=""> Viajar<br/>
-                                <input type="checkbox" name="fiesta" id=""> Fiesta<br/>
+                                <input class="black" type="checkbox" name="cine" id=""> Cine<br/>
+                                <input class="black" type="checkbox" name="deportes" id=""> Deportes<br/>
+                                <input class="black" type="checkbox" name="viajar" id=""> Viajar<br/>
+                                <input class="black" type="checkbox" name="fiesta" id=""> Fiesta<br/>
                             </p>
                             <p>
                                 <label for="">Sexo:</label><br/>
-                                <input type="radio" name="Sexo" id=""> Hombre<br/>
-                                <input type="radio" name="Sexo" id=""> Mujer<br/>
-                                <input type="radio" name="Sexo" id=""> No te importa<br/>
-                                <input type="radio" name="Sexo" id=""> Lo que yo quiera<br/>
+                                <input class="black" type="radio" name="Sexo" id=""> Hombre<br/>
+                                <input class="black" type="radio" name="Sexo" id=""> Mujer<br/>
+                                <input class="black" type="radio" name="Sexo" id=""> No te importa<br/>
+                                <input class="black" type="radio" name="Sexo" id=""> Lo que yo quiera<br/>
                             </p>
                             <p>
-                                <label for="">Comentarios:</label><br />
-                                <textarea name="comment" id="" cols="70" rows="7"></textarea>
+                                <label  for="">Comentarios:</label><br />
+                                <textarea class="black" name="comment" id="" cols="70" rows="7"></textarea>
                             </p>       
                             <p>
                                 <label for="">Provincia:</label>
                                 <select name="provincia" id="" multiple>
-                                    <option value="1">Toledo</option>
-                                    <option value="2">Cuenca</option>
-                                    <option value="3">C. Real</option>
-                                    <option value="4">Guadalajara</option>
-                                    <option value="5">Albacete</option>
+                                    <option class="black" value="1">Toledo</option>
+                                    <option class="black" value="2">Cuenca</option>
+                                    <option class="black" value="3">C. Real</option>
+                                    <option class="black" value="4">Guadalajara</option>
+                                    <option class="black" value="5">Albacete</option>
                                 </select>
                             </p>    
                             <p>
                                 <input type="file" name="foto" id="">
                             </p>               
                             <p>
-                                <input type="submit" value="Enviar" class="btn btn-red">
+                                <input class="black" class="black" type="submit" value="Enviar" class="btn btn-red">
                             </p>
                             
                         </fieldset>
@@ -145,22 +145,22 @@
                     <form action="kk.php" method="post" class="formhtml5">
                         <fieldset>
                             <legend>Inputs HTML5</legend>
-                            <p><label for="">Color:</label> <input type="color" name="color" id=""></p>
-                            <p><label for="">Date:</label> <input type="date" name="date" id=""></p>
-                            <p><label for="">Datetime:</label> <input type="datetime" name="datetime" id=""></p>
-                            <p><label for="">Datetime-local:</label> <input type="datetime-local" name="datetime-local"
+                            <p><label for="">Color:</label> <input class="black" type="color" name="color" id=""></p>
+                            <p><label for="">Date:</label> <input class="black" type="date" name="date" id=""></p>
+                            <p><label for="">Datetime:</label> <input class="black" type="datetime" name="datetime" id=""></p>
+                            <p><label for="">Datetime-local:</label> <input class="black" type="datetime-local" name="datetime-local"
                                     id=""></p>
-                            <p><label for="">Email:</label> <input type="email" name="email" id=""></p>
-                            <p><label for="">Month:</label> <input type="month" name="month" id=""></p>
-                            <p><label for="">Number:</label> <input type="number" name="number" id="" step="2" min="10"
+                            <p><label for="">Email:</label> <input class="black" type="email" name="email" id=""></p>
+                            <p><label for="">Month:</label> <input class="black" type="month" name="month" id=""></p>
+                            <p><label for="">Number:</label> <input class="black" type="number" name="number" id="" step="2" min="10"
                                     max="30"></p>
-                            <p><label for="">Range:</label> <input type="range" name="range" id="" step="2" min="10"
+                            <p><label for="">Range:</label> <input class="black" type="range" name="range" id="" step="2" min="10"
                                     max="30"></p>
-                            <p><label for="">Tel:</label> <input type="tel" name="tel" id=""></p>
-                            <p><label for="">Time:</label> <input type="time" name="time" id=""></p>
-                            <p><label for="">Url:</label> <input type="url" name="url" id=""></p>
-                            <p><label for="">Week:</label> <input type="week" name="week" id=""></p>
-                            <p><input type="submit" value="Aceptar" id="" class="btn btn-green"></p>
+                            <p><label for="">Tel:</label> <input class="black" type="tel" name="tel" id=""></p>
+                            <p><label for="">Time:</label> <input class="black" type="time" name="time" id=""></p>
+                            <p><label for="">Url:</label> <input class="black" type="url" name="url" id=""></p>
+                            <p><label for="">Week:</label> <input class="black" type="week" name="week" id=""></p>
+                            <p><input class="black" type="submit" value="Aceptar" id="" class="btn btn-green"></p>
                         </fieldset>
                     </form>
 
