--- a/multimedia.html
+++ b/multimedia.html
@@ -71,23 +71,23 @@
                     <h2 class="text-center">MULTIMEDIA</h2>
                     <h3>GALERIA</h3>
                     <div class="col3">
-                        <img src="img/1200px-Ayuntamiento_de_Noez.jpg" alt="">
+                        <img src="img/1200px-Ayuntamiento_de_Noez.jpg" alt="" width="100%">
                     </div>
                     <div class="col3">
                 <div class="col3">
-                    <img src="img/220px-Iglesia_de_San_Julián,_Noez_01.jpg" alt="">
+                    <img src="img/220px-Iglesia_de_San_Julián,_Noez_01.jpg" alt="" width="100%">
                 </div>
                 <div class="col3">
-                    <img src="img/448ae483d0367cb491b0bb3b845cc97a.jpg" alt="">
+                    <img src="img/448ae483d0367cb491b0bb3b845cc97a.jpg" alt="" width="100%">
                 </div>
-                <div>
-                    <img src="img/logonoez.jpg" alt="">
+                <div class="col3">
+                    <img src="img/logonoez.jpg" alt="" width="100%">
                 </div>
-                <div>
-                    <img src="img/noez-vista-aerea.jpg" alt="">
+                <div class="col3">
+                    <img src="img/noez-vista-aerea.jpg" alt="" width="100%">
                 </div>
-                <div>
-                    <img src="img/plaza noez.jpg" alt="">
+                <div class="col3">
+                    <img src="img/plaza noez.jpg" alt="" width="100%">
                 </div>
                 </div>
             </div>
