--- a/enlaces.html
+++ b/enlaces.html
@@ -68,7 +68,7 @@
               ><img src="img/Netflix.webp.png" alt="logo Netflix" />
             </a>
             <h3>Enlaces a una página a una pestaña nueva</h3>
-            <a href="https://www.toledo.es"> target="_blank">Ir a Toledo</a>. Lo
+            <a href="https://www.toledo.es"> <target="_blank">Ir a Toledo</a>. Lo
             hemos conseguido con el atributo
             <span class="etiqueta2">target</span> con el valor
             <span class="etiqueta2">_blank</span>
