--- a/enlaces.html
+++ b/enlaces.html
@@ -65,7 +65,7 @@
             <a href="https://www.google.com"> Ir a google</a>
             <h3>Enlaces a una página de internet desde una imagen</h3>
             <a href="https://www.netflix.com"
-              ><img src="img/Netflix.webp.png" alt="logo Netflix" />
+              ><img src="img/Netflix.webp.png" alt="logo Netflix" width="5%"/>
             </a>
             <h3>Enlaces a una página a una pestaña nueva</h3>
             <a href="https://www.toledo.es"> <target="_blank">Ir a Toledo</a>. Lo
