--- a/enlaces.html
+++ b/enlaces.html
@@ -11,7 +11,7 @@
     <div class="container shadow">
       <header>
         <div class="row align-items-center">
-          <div class="col-3"><a href="http://iesazarquiel.es/"><img src="img/logoiesfseif.png" alt="logo" width="250" />
+          <div class="col-3"><a href="http://iesazarquiel.es/"><img src="img/naughty_dog_logo.jpeg" alt="logo" width="250" />
           </div>
           <div class="col-9">
             <span id="btnmenu" onclick="opendrawer()">&#9776;</span>
