--- a/formularios.html
+++ b/formularios.html
@@ -79,7 +79,7 @@
                                 <input class="black" type="password" name="pass" id="" placeholder="Clave">
                             </p>
                             <p>
-                                <input class="black" type="submit" value="Enviar">
+                                <input class="button" type="submit" value="Enviar">
                             </p>
                         </fieldset>
                     </form>
