--- a/multimedia.html
+++ b/multimedia.html
@@ -70,6 +70,7 @@
                 <div id="multimedia" class="py-3">
                     <h2 class="text-center">MULTIMEDIA</h2>
                     <h3>GALERIA</h3>
+                    <div class="fotos">
                     <div class="col3">
                         <img src="img/1200px-Ayuntamiento_de_Noez.jpg" alt="" width="100%">
                     </div> 
@@ -88,6 +89,7 @@
                     <div class="col3">
                         <img src="img/plaza noez.jpg" alt="" width="100%">  
                     </div>
+                </div>
             </div>
             <div class="cb"></div>
         </main>
