--- a/multimedia.html
+++ b/multimedia.html
@@ -90,7 +90,9 @@
                         <img src="img/plaza noez.jpg" alt="" width="100%">  
                     </div>
                 </div>
-            </div>
+                <h2 class="text-center">VIDEO</h2>
+                <video src="img/noez2-‐-Hecho-con-Clipchamp (online-video-cutter.com).mp4" type="video/mp4" width="50%" controls></video>
+                </div>
             <div class="cb"></div>
         </main>
         <footer>
