--- a/multimedia.html
+++ b/multimedia.html
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <h2 class="text-center">VIDEO</h2>
-                <video src="img/noez2-‐-Hecho-con-Clipchamp (online-video-cutter.com).mp4" type="video/mp4" width="50%" controls></video>
+                <video class="video" src="img/noez2-‐-Hecho-con-Clipchamp (online-video-cutter.com).mp4" type="video/mp4" width="50%" controls></video>
                 </div>
             <div class="cb"></div>
         </main>
