--- a/multimedia.html
+++ b/multimedia.html
@@ -92,6 +92,9 @@
                 </div>
                 <h2 class="text-center">VIDEO</h2>
                 <video class="video" src="img/noez2-‐-Hecho-con-Clipchamp (online-video-cutter.com).mp4" type="video/mp4" width="50%" controls></video>
+
+                <h2 class="text-center">AUDIO</h2>
+                <audio class="video" src="img/audio.mp3" type="audio/mp3" width="50%" controls></audio>
                 </div>
             <div class="cb"></div>
         </main>
