--- a/listas.html
+++ b/listas.html
@@ -9,6 +9,16 @@
 </head>
 
 <body>
+
+    <nav class="barra">
+        <ul>
+            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="#servicios">Servicios</a></li>
+            <li><a href="#about">Nosotros</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+        </ul>
+    </nav>
+
     <div class="container shadow">
         <header>
             <div class="row align-items-center">
@@ -16,7 +26,7 @@
                 <div class="col-9">
                     <span id="btnmenu" onclick="opendrawer()">&#9776;</span>
                     <nav id="menu">
-                        <ul class="text-right">
+                        <ul class="barra" class="text-right">
                             <li>
                                 <a href="index.html">
                                     Home
