--- a/listas.html
+++ b/listas.html
@@ -215,16 +215,16 @@
                     <h3>Listas de definición</h3>
                     <dl class="custombl">
                         <dt>
-                            Gafas
-                            <dd>Objeto que sirve para ver mejor</dd>
+                            F.R.I.E.N.D.S
+                            <dd>De las mejores series jamás creadas</dd>
                         </dt>
                         <dt>
-                            Tiburón
-                            <dd>Pez grande de la familia de los mamiferos</dd>
+                            T.A.R.D.I.S
+                            <dd>Cabina de policia azul que viaja a traves del espacio y el tiempo</dd>
                         </dt>
                         <dt>
-                            Cachibache
-                            <dd>Un objeto que puede ser cualquier trasto</dd>
+                            FUNKO POP
+                            <dd>Muñeco de vinilo de colección</dd>
                         </dt>
                     </dl>
                 </div>
