--- a/multimedia.html
+++ b/multimedia.html
@@ -79,7 +79,10 @@
             <div class="p-3">
                 <div id="multimedia" class="py-3">
                     <h2 class="text-center">MULTIMEDIA</h2>
-                    <h3>GALERIA</h3>
+                    <span>
+                        
+                    </span>
+                    <h3 class="text-center" >GALERIA</h3>
                     <div class="fotos">
                     <div class="col3">
                         <img src="img/1200px-Ayuntamiento_de_Noez.jpg" alt="" width="100%">
