--- a/formularios.html
+++ b/formularios.html
@@ -81,7 +81,7 @@
                     <h2 class="text-center">FORMULARIOS</h2>
                     <form action="#" method="get" class="formlogin">
                         <fieldset>
-                            <legend class="">Login</legend>
+                            <legend class="formlogin">Login</legend>
                             <p>
                                 <input class="black" type="text" name="user" id="" placeholder="User">
                             </p>
@@ -124,8 +124,8 @@
                                 <label for="">Sexo:</label><br/>
                                 <input class="black" type="radio" name="Sexo" id=""> Hombre<br/>
                                 <input class="black" type="radio" name="Sexo" id=""> Mujer<br/>
-                                <input class="black" type="radio" name="Sexo" id=""> No te importa<br/>
-                                <input class="black" type="radio" name="Sexo" id=""> Lo que yo quiera<br/>
+                                <input class="black" type="radio" name="Sexo" id=""> Doble elefante telepata de guerra<br/>
+                                <input class="black" type="radio" name="Sexo" id=""> Un avión militar de guerra F-15<br/>
                             </p>
                             <p>
                                 <label  for="">Comentarios:</label><br />
@@ -145,7 +145,7 @@
                                 <input type="file" name="foto" id="">
                             </p>               
                             <p>
-                                <input class="black" class="black" type="submit" value="Enviar" class="btn btn-red">
+                                <input class="button" class="black" type="submit" value="Enviar" class="btn btn-red">
                             </p>
                             
                         </fieldset>
@@ -153,8 +153,8 @@
                     <div class="cb"></div>
                     <h3 class="text-center">FORMULARIO CON ELEMENTOS HTML5:</h3>
                     <form action="kk.php" method="post" class="formhtml5">
-                        <fieldset>
-                            <legend>Inputs HTML5</legend>
+                        <fieldset class="formulario">
+                            <legend class="colorn">Inputs HTML5</legend>
                             <p><label for="">Color:</label> <input class="black" type="color" name="color" id=""></p>
                             <p><label for="">Date:</label> <input class="black" type="date" name="date" id=""></p>
                             <p><label for="">Datetime:</label> <input class="black" type="datetime" name="datetime" id=""></p>
@@ -170,7 +170,7 @@
                             <p><label for="">Time:</label> <input class="black" type="time" name="time" id=""></p>
                             <p><label for="">Url:</label> <input class="black" type="url" name="url" id=""></p>
                             <p><label for="">Week:</label> <input class="black" type="week" name="week" id=""></p>
-                            <p><input class="black" type="submit" value="Aceptar" id="" class="btn btn-green"></p>
+                            <p><input class="button" type="submit" value="Aceptar" id="" class="btn btn-green"></p>
                         </fieldset>
                     </form>
 
