--- a/parrafos.html
+++ b/parrafos.html
@@ -25,6 +25,8 @@
                 <div class="col-3"><a href="http://iesazarquiel.es/"><img src="img/naughty_dog_logo.jpeg" alt="logo" width="250"></div>
                 <div class="col-9">
                     <span id="btnmenu" onclick="opendrawer()">&#9776;</span>
+                    <div class="dropdown">
+                        <button class="color">Menu</button>
                     <nav id="menu">
                         <ul class="barra" class="text-right">
                             <li>
@@ -66,7 +68,7 @@
                     </nav>
                 </div>
             </div>
-
+        </div>
 
         </header>
         <main class="shadow">
@@ -78,7 +80,7 @@
             </div>
             <div class="p-3">
                 <div id="home" class="py-3">
-                    <h2 class="text-center">parrafos</h2>
+                    <h2 class="text-center">PARRAFOS</h2>
                     <p>Un párrafo se hace con la etiqueta p <span class="etiqueta">p</span> como observamos, entre
                         párrafo existe una linea en blanco</p>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi excepturi, reprehenderit esse
@@ -91,18 +93,18 @@
                         asperiores quae voluptate excepturi nulla incidunt illum reiciendis cum repudiandae quidem.</p>
                         <p>El párrafo anterior tiene una etiqueta <span class="etiqueta">br</span> </p>
                         <p>Para realizar encabezados (titulos) utilizamos las etiquetas <span class="etiqueta">h1, h2, h3, h4, h5 y h6</span></p>
-                        <h1>ENCABEZADO 1</h1>
-                        <h2>ENCABEZADO 2</h2>
-                        <h3>ENCABEZADO 3</h3>
-                        <h4>ENCABEZADO 4</h4>
-                        <h5>ENCABEZADO 5</h5>
-                        <h6>ENCABEZADO 6</h6>
+                        <h1>1ª GENERACIÓN</h1>
+                        <h2>2ª GENERACIÓN</h2>
+                        <h3>3ª GENERACIÓN</h3>
+                        <h4>4ª GENERACIÓN</h4>
+                        <h5>5ª GENERACIÓN</h5>
+                        <h6>6ª GENERACIÓN</h6>
                         <P>Para realizar una negrita utilizamos la etiqueta <span class="etiqueta">strong</span> y para una cursia <span class="etiqueta">em</span> </P>
                         <p>Esto es una <strong>negrita</strong></p>
                         <p>Esto es una cursiva <em>cursiva</em></p>
                         <p>Vamos a realizar superindices y subindices con las etiquetas <span class="etiqueta">sup y sub</span></p>
-                        <p>Superindice: x <sup>2</sup></p>
-                        <p>Subindice: x <sub>2</sub></p>
+                        <p>Superindice: x <sup> 2 <img src="img/cesped.png" alt=""> </sup></p>
+                        <p>Subindice: x <sub> 2 <img src="img/cesped.png" alt=""> </sub></p>
                         <P>Para realizar una abreviatura utilizamos la etiqueta <span class="etiqueta">abbr</span></P>
                         <p><abbr title="Organización de las naciones unidas">O.N.U</abbr></p>
                         <p>Hemos usado<span class="etiqueta">div</span> para un solo bloque y <span class="etiqueta">span</span> (inline) en una sola linea </p>
